# density_prediction

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: project_description.md
experiments/: SWEETVIZ_REPORT.html  data_analysis.ipynb  modeling.ipynb
libs/density_prediction/: .gitattributes  Dockerfile  README.md  pyproject.toml
libs/density_prediction/app/: main.py  stream_processor.py
libs/density_prediction/app/api/: inference.py
libs/density_prediction/app/config/: settings.py
libs/density_prediction/app/models/: __init__.py  fake_model.py  transformer_model.py  transformer_ts.py
libs/density_prediction/app/utils/: logger.py  model_name.py  stream_handler.py
libs/density_prediction/scripts/: docker_build.sh  docker_run.sh  start_server.sh  stop_server.sh
libs/density_prediction/tests/: test_service.py  tests_inference.py  utils.py
libs/density_prediction/tests/data/: test_data.3_samples.input.json  test_data.3_samples.input.npy  test_data.prediction.json  test_data.prediction.npy
