[tool.poetry]
name = "density_prediction"
version = "0.1.0"
description = "A FastAPI-based inference API with data streaming. It predicts the thermosphere density (space weather science)."
authors = ["Leonid Ganeline <leo.gan.57@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://www.github.com/leo-gan/density_prediction"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.1"
uvicorn = "^0.32.0"
torch = "2.4.1"
httpx = "^0.27.2"
numpy = "^2.1.2"
python-multipart = "^0.0.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.0"
pytest-asyncio = "^0.24.0"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"

[build-system]
requires = ["poetry-core>=1.8.4"]
build-backend = "poetry.core.masonry.api"
